# Fashion-Exchange

./: FX Report.docx  README.md  package-lock.json  package.json  tailwind.config.ts
FXModel-dev2/: Dockerfile  docker-compose.yml  fashion_exchange.db  pyproject.toml
FXModel-dev2/app/: main.py
FXModel-dev2/app/core/: db_config.py
FXModel-dev2/app/dataset/: synthetic_users_with_weight.csv
FXModel-dev2/app/dbmodels/: base.py
FXModel-dev2/app/ml_models/: ml_model.py
FXModel-dev2/docs/api/: match.http
app/: globals.css  layout.tsx
app/(home)/: page.tsx
app/(products)/enjoy-thrifting/: page.tsx
app/(products)/find-your-fashion-mate/: page.tsx
app/(products)/find-your-fashion-mate/review-preference/: page.tsx
app/(products)/find-your-fashion-mate/right-swipe/: page.tsx
app/(products)/host-your-own-thrift-store/: page.tsx
app/(products)/thrift-store/: page.tsx
app/story/: page.tsx
components/atom/Cards/ProductCard/: index.tsx  styles.module.scss
components/atom/Cards/ProductCard/ProductCardContent/: index.tsx  styles.module.scss
components/atom/Cards/RightSwipe/: index.tsx
components/molecule/Page/Home/ProductsSection/: index.tsx  styles.module.scss
components/molecule/Page/Products/FashionMate/: Hero.tsx
components/molecule/Page/Story/Imagine/: index.tsx
components/molecule/Page/Story/SwapHow/: index.tsx
components/template/FashionMate/: index.tsx
components/template/Home/: index.tsx
components/template/Story/: index.tsx
utils/constants/: fashionMateSteps.ts  products.ts
utils/interface/: props.ts  shared.ts
(+5 files in other folders)
