[tool.poetry]
name = "fx-model"
version = "0.1.0"
description = "A FastAPI app with Poetry and Docker"
authors = ["Adesh Bode"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0"
fastapi = "^0.115.3"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.2"
scikit-learn = "^1.3"
sqlalchemy = "^2.0.36"
sqlalchemy-utils = "^0.41.2"
databases = "^0.9.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
isort = "^5.13.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

